# csif

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  debug_data_loading.js  debug_test.js  index.js  package-lock.json  package.json  test.js  test_complete.js
include/: sif_json.h  sif_parser.h  sif_utils.h
julia/: HexViewer.jl  SIFKit.jl  SiferTypes.jl  hex_test.jl  sifer.jl  test.jl  utils.jl
python/: _sif_open.py  spectrum.py  test.py
src/: binding.cc  debug_detail.c  debug_sif.c  main.c  sif_cli_json.c  sif_json.c  sif_parser.c  sif_utils.c
test_data/: 1OD_500uW_sapphire_200umFiber_.sif
tests/: test_ll  test_ll.c
